<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="387dp"
        android:layout_height="253dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nama" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pria" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wanita" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hobi" />

            <LinearLayout
                android:layout_width="389dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coding" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reading" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/traveling"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="57dp"
        android:layout_height="56dp"
        android:contentDescription="@string/TODO"
        android:scaleType="fitStart"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="62dp"
        android:layout_height="60dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitStart"
        android:src="@drawable/delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>